@@ -3,7 +3,7 @@
 @setfilename mpfr.info
 @documentencoding UTF-8
 @set VERSION 4.1.0-dev
-@set UPDATED-MONTH March 2020
+@set UPDATED-MONTH April 2020
 @settitle GNU MPFR @value{VERSION}
 @synindex tp fn
 @iftex
@@ -4195,6 +4195,16 @@ the behavior of code written for some MPFR version when built and run
 against another MPFR version (older or newer), as described below.
 
 @itemize @bullet
+
+@item The formatted output functions (@code{mpfr_printf}, etc.) have
+slightly changed in MPFR@tie{}4.1 in the case where the precision field
+is empty: trailing zeros were not output with the conversion specifier
+@samp{e} / @samp{E} (the chosen precision was not fully specified and
+it depended on the input value), and also on the value zero with the
+conversion specifiers @samp{f} / @samp{F} / @samp{g} / @samp{G} (this
+could partly be regarded as a bug); they are now kept in a way similar
+to the formatted output functions from C@.
+@c https://gforge.inria.fr/tracker/index.php?func=detail&aid=21816&group_id=136&atid=619
 
 @item @code{mpfr_abs}, @code{mpfr_neg} and @code{mpfr_set} changed in
 MPFR@tie{}4.0.
