@@ -36,6 +36,9 @@ Changes from versions 4.0.* to version 4.1.0:
 - The mpfr_out_str function now accepts bases from -2 to -36, in order to
   follow mpfr_get_str and GMP's mpf_out_str functions.
 - Shared caches: cleanup; really detect lock failures (abort in this case).
+- The behavior of the formatted output functions (mpfr_printf, etc.) with
+  an empty precision field has improved: trailing zeros are kept in a way
+  similar to the formatted output functions from C.
 - Improved mpfr_add and mpfr_sub when all operands have a precision equal to
   twice the number of bits per word, e.g., 128 bits on a 64-bit computer.
 - Optimized the tuning parameters for various architectures.
